--- a/prep/cw/v2020/soil_contamination_data_prep.Rmd
+++ b/prep/cw/v2020/soil_contamination_data_prep.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'OHI+ Palmyra 2020: Clean Waters Goal Soil Contamination Trend'
+title: 'OHI+ Palmyra 2020: Clean Waters Goal Soil Contamination Layer'
 author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
@@ -17,6 +17,7 @@ output:
 
 # Summary
 
+This script calculates a status score for soil contamination as part of the Clean Water goal.  
 
 # Data
 
